# Backend

./: .gitignore  Cargo.toml  README.md  Readme.md  bundle.nu  diesel.toml  release.nu  vpbackend
database/migrations/2025-07-08-060957_init/: down.sql  up.sql
scripts/: README.md  bundle.nu  publish.nu  read-version.nu  refresh-release.nu  release.nu  unrelease.nu
src/: functions.rs  main.rs
src/database/: models.rs  schema.rs
src/scraper/: scraping.py
tools/: .env  Dockerfile  docker-compose.yaml  requirements.txt  server.nu  update.nu  update.sh
