[package]
name = "vp-backend"
version = "1.1.4"
authors = ["sert"]
description = "Vertretungsplan Software"
repository = "https://github.com/VertretungsplanCorp/Backend"
readme = "README.md"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1.45", features = ["rt", "net", "rt-multi-thread"] }
dotenvy = { version = "0.15" }
diesel = { version = "2.2", features = ["postgres", "chrono", "serde_json", "uuid"] }
diesel_migrations = { version = "2.2" }
deadpool-diesel = { version = "0.6", features = ["postgres"] }
serde_json = { version = "1.0" }
pyo3 = { version = "0.25", features = ["auto-initialize"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0" }
uuid = { version = "1.17", features = ["serde"] }
indexmap = { version = "2.10" }
vp-api = { version = "0.0.1", git = "https://github.com/VertretungsplanCorp/Api.git", features = ["db"]}
